# rpg-engine

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  mkdocs.yml  vcpkg.json
.github/actions/: upload-build.yml
.github/actions/setup-vcpkg/: action.yml
.github/workflows/: build.yml  format.yml
client/: CMakeLists.txt  client.hpp  constants.hpp  game.cpp  game.hpp  main.cpp
client/graphics/: render-system.cpp  render-system.hpp
client/os/: os-event-dispatcher.cpp  os-event-dispatcher.hpp  os-event-handler.cpp  os-event-handler.hpp  os-events.hpp  os.cpp  os.hpp
cmake/: helpers.cmake  link_helpers.cmake
common/: CMakeLists.txt  event-queue.hpp  event-system.hpp  events.hpp  test.hpp
common/events/: event-dispatcher.hpp  event-queue.hpp  event.hpp  events.hpp
common/proto/: components.proto
common/util/: nomovenocopy.hpp  types.hpp  update-thread.hpp
docs/: index.md
docs/engine/: index_classes.md  index_namespaces.md  index_pages.md
docs/engine/Classes/: classrpg_1_1_client.md  classrpg_1_1_game.md  classrpg_1_1events_1_1_event_dispatcher.md  classrpg_1_1events_1_1_event_queue.md  classrpg_1_1graphics_1_1_render_system.md  classrpg_1_1os_1_1_o_s.md  classrpg_1_1os_1_1_o_s_event_handler.md  classrpg_1_1util_1_1_no_move_no_copy.md  classrpg_1_1util_1_1_update_thread.md  structrpg_1_1config_1_1_g_l___v_e_r_s_i_o_n___p_a_i_r.md  structrpg_1_1events_1_1_entity_created.md  structrpg_1_1events_1_1_entity_destroyed.md  structrpg_1_1events_1_1_event.md  structrpg_1_1events_1_1_event_queue_1_1_locking_queue.md  structrpg_1_1events_1_1_focus_blur_event.md  structrpg_1_1events_1_1_focus_captured_event.md  structrpg_1_1events_1_1os_1_1_file_drop_event.md  structrpg_1_1events_1_1os_1_1_keyboard_event.md  structrpg_1_1events_1_1os_1_1_mouse_btn_event.md  structrpg_1_1events_1_1os_1_1_mouse_click_event.md  structrpg_1_1events_1_1os_1_1_mouse_hover.md  structrpg_1_1events_1_1os_1_1_mouse_lock_event.md  structrpg_1_1events_1_1os_1_1_mouse_move_event.md  structrpg_1_1events_1_1os_1_1_mouse_scroll_event.md  structrpg_1_1events_1_1os_1_1_window_resized_event.md  structrpg_1_1util_1_1_update_thread_1_1_methods.md
docs/engine/Namespaces/: namespacerpg.md  namespacerpg_1_1config.md  namespacerpg_1_1events.md  namespacerpg_1_1events_1_1os.md  namespacerpg_1_1graphics.md  namespacerpg_1_1os.md  namespacerpg_1_1util.md
docs_gen/: CMakeLists.txt
docs_gen/mkdocs/: CMakeLists.txt  mkdocs.yml
docs_targets/doxygen/: CMakeLists.txt
doxybook2/include/Doxybook/: Config.hpp  Enums.hpp  Generator.hpp  JsonConverter.hpp  Node.hpp  Utils.hpp
server/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  sanity_test.cpp
